feat: Implement scalable Kafka architecture with multiple producers and consumers
🚀 Scalability Features:
- Add batch producer (producer_batch.py) for high-volume event generation
- Implement scalable consumer (kafka_consumer_scalable.py) with load balancing
- Create consumer group management with automatic partition assignment
- Add Kafka topic management script (manage_kafka.py)

🏗️ Architecture Improvements:
- Configure 3 consumer instances with consumer group load balancing
- Add batch producer service for load testing
- Implement consumer tracking and monitoring
- Add fault tolerance and error handling

📊 Docker Compose Updates:
- Replace single consumer with 3 scalable consumers (consumer-1, consumer-2, consumer-3)
- Add batch producer service for testing
- Configure consumer group for automatic load distribution

📚 Documentation:
- Add comprehensive SCALABILITY.md guide
- Update README with scalability features and usage examples
- Document performance tuning and monitoring strategies

🔧 Management Tools:
- Add consume_kafka_scalable Django management command
- Support custom consumer IDs and consumer groups
- Add Kafka topic creation, listing, and deletion utilities

This implementation demonstrates horizontal scaling capabilities with:
- Multiple producers generating events
- Consumer groups with automatic partition assignment
- Load balancing across multiple consumer instances
- Fault tolerance and recovery mechanisms

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,8 @@ services:
       sh -c "python manage.py migrate &&
              daphne -b 0.0.0.0 -p 8000 dashboard_backend.asgi:application"
 
-  # Kafka Consumer
-  kafka-consumer:
+  # Kafka Consumer 1
+  kafka-consumer-1:
     build:
       context: .
       dockerfile: Dockerfile.backend
@@ -113,7 +113,70 @@ services:
         condition: service_healthy
     volumes:
       - .:/app
-    command: python manage.py consume_kafka
+    command: python manage.py consume_kafka_scalable --consumer-id consumer-1 --consumer-group dashboard_consumer_group
+
+  # Kafka Consumer 2
+  kafka-consumer-2:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    environment:
+      - DEBUG=True
+      - DB_HOST=postgres
+      - DB_NAME=kafka_dashboard
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - REDIS_URL=redis://redis:6379
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    volumes:
+      - .:/app
+    command: python manage.py consume_kafka_scalable --consumer-id consumer-2 --consumer-group dashboard_consumer_group
+
+  # Kafka Consumer 3
+  kafka-consumer-3:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    environment:
+      - DEBUG=True
+      - DB_HOST=postgres
+      - DB_NAME=kafka_dashboard
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - REDIS_URL=redis://redis:6379
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    volumes:
+      - .:/app
+    command: python manage.py consume_kafka_scalable --consumer-id consumer-3 --consumer-group dashboard_consumer_group
+
+  # Batch Producer (for load testing)
+  batch-producer:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    environment:
+      - DEBUG=True
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      kafka:
+        condition: service_healthy
+    volumes:
+      - .:/app
+    command: python producer_batch.py --bootstrap-servers kafka:9092 --mode batch --batch-size 50
 
   # React Frontend
   frontend:
